--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ body {
 } */
 .about-section.new-style {
   opacity: 1;
-  background-image: linear-gradient(to bottom, #2c1e5bf6, #2c1e5b51),
+  background-image: linear-gradient(to bottom, #000000a7, #000000a5),
     url(images/abt.jpg);
   margin-bottom: 0;
   background-attachment: fixed;
@@ -276,6 +276,7 @@ body {
 .social_icon a {
   text-decoration: none;
   width: 50px;
+  font-size: 17px;
   height: 50px;
   line-height: 50px;
   text-align: center;
