--- a/style.css
+++ b/style.css
@@ -97,16 +97,34 @@ body {
   display: flex;
 }
 .features-grid {
-  gap: 41px;
+  gap: 30px;
   grid-template-rows: auto auto;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
   display: grid;
 }
+.wrapper {
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+}
+.paragraph {
+  color: #fafafa;
+  text-transform: none;
+  margin-bottom: 0;
+  padding-top: 0;
+  font-family: Poppins, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5em;
+}
 .ftd_1 {
-  width: 290px;
+  width: 350px;
   border: 1px solid;
-  background-color: #3b352b;
+  background-image: linear-gradient(to right, #28162c, #0d1733);
   box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
     inset 0 7px 21px 0 rgb(255 255 255 / 20%),
     inset 0 -82px 68px 0 rgb(96 68 144 / 18%),
@@ -119,9 +137,9 @@ body {
   padding: 20px 10px;
   transition: 0.4s;
 }
-
+/* 
 .ftd_2 {
-  width: 290px;
+  width: 350px;
   border: 1px solid;
   background-color: #0d1733;
   box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
@@ -137,7 +155,7 @@ body {
   transition: 0.4s;
 }
 .ftd_3 {
-  width: 290px;
+  width: 350px;
   border: 1px solid;
   background-color: #0e1e474c;
   box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
@@ -153,7 +171,7 @@ body {
   transition: 0.4s;
 }
 .ftd_4 {
-  width: 290px;
+  width: 350px;
   border: 1px solid;
   background-color: #311a32;
   box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
@@ -167,7 +185,7 @@ body {
   border-radius: 5px;
   padding: 20px 10px;
   transition: 0.4s;
-}
+}*/
 .tier-content {
   grid-column-gap: 15px;
   grid-row-gap: 15px;
