--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   text-decoration: none;
   transition: box-shadow 0.2s ease 0s;
   display: flex;
-  box-shadow: #2640e4 1px 0px 40px;
+  box-shadow: #00eef6 1px 0px 40px;
   /* box-shadow: 0px 0px 15px 16px #, 0px 0px 15px 0px #5a00e8,
     0px 0px 15px -8px #ebf7fd; */
   position: relative;
@@ -124,19 +124,26 @@ body {
 .ftd_1 {
   width: 350px;
   border: 1px solid;
-  background-image: linear-gradient(to right, #28162c, #0d1733);
-  box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
+  /* background-image: linear-gradient(to right, #28162c, #0d1733); */
+  background-color: #0d1733;
+  /* box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
     inset 0 7px 21px 0 rgb(255 255 255 / 20%),
     inset 0 -82px 68px 0 rgb(96 68 144 / 18%),
     inset 0 -98px 100px -108px rgb(202 172 255 / 10%),
     inset 0 4px 18px 0 rgb(185 182 207 / 62%),
-    inset 0 1px 40px 0 rgb(195 192 214 / 15%) !important;
+    inset 0 1px 40px 0 rgb(195 192 214 / 15%) !important; */
   display: flex;
+  box-shadow: #00eef6 1px 0px 15px;
   align-items: center;
   border-radius: 5px;
   padding: 20px 10px;
   transition: 0.4s;
+  text-align: center;
+  padding: 25px 30px;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
+
 /* 
 .ftd_2 {
   width: 350px;
@@ -189,17 +196,19 @@ body {
 .tier-content {
   grid-column-gap: 15px;
   grid-row-gap: 15px;
-  background-color: #000;
+
   /* background-image: linear-gradient(#050d0f, rgba(5, 5, 5, 0.85) 67%, #000702); */
   /* background-image: linear-gradient(to right, #28162c, #0D1733); */
-  background-image: linear-gradient(to bottom, #28162c, #0d1733);
+  background-color: #0d1733 !important;
+  background-image: none;
   border: 1px solid rgb(16, 90, 63);
-  box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
+  /* box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
     inset 0 7px 21px 0 rgb(255 255 255 / 20%),
     inset 0 -82px 68px 0 rgb(96 68 144 / 18%),
     inset 0 -98px 100px -108px rgb(202 172 255 / 10%),
     inset 0 4px 18px 0 rgb(154 146 210 / 15%),
-    inset 0 1px 40px 0 rgb(227 222 255 / 15%) !important;
+    inset 0 1px 40px 0 rgb(227 222 255 / 15%) !important; */
+  box-shadow: #00eef6 1px 0px 15px;
   border-radius: 35px;
   flex-direction: column;
   justify-content: flex-start;
@@ -207,7 +216,6 @@ body {
   padding: 44px 25px;
   display: flex;
   position: relative;
-  box-shadow: 0 0 14px -8px #7dffa1;
 }
 
 /***********about section***********/
@@ -256,7 +264,7 @@ body {
 }
 
 .info-box._2 {
-  background-image: linear-gradient(to right, #28162c, #0d1733);
+  background-image: linear-gradient(to right, #05090f, #05090f);
   border: 1px solid rgb(16, 90, 63);
   box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
     inset 0 7px 21px 0 rgb(255 255 255 / 20%),
@@ -301,9 +309,10 @@ body {
   background-color: #0d1733;
   border-radius: 50%;
   display: flex;
+  color: #00eef6;
   justify-content: center;
   align-items: center;
-  box-shadow: #2640e4 1px 0px 10px;
+  box-shadow: #00eef6 1px 0px 10px;
 }
 .div-block-13 {
   grid-row-gap: 6px;
@@ -314,7 +323,7 @@ body {
   display: flex;
 }
 .ban-pad {
-  padding: 200px 0 100px;
+  padding: 300px 0 100px;
 }
 .footer-container {
   z-index: 10;
@@ -325,6 +334,28 @@ body {
   padding-bottom: 56px;
   position: relative;
 }
+.press-logos-outside-container {
+  width: 100%;
+  height: 120px;
+  max-width: 100%;
+  backdrop-filter: blur(5px);
+  background-color: #0d1733;
+  /* background-image: linear-gradient(to right, #28162c, #0d1733); */
+  border: 1px solid rgb(16, 90, 63);
+  box-shadow: inset 0 39px 56px -56px rgb(255 255 255 / 25%),
+    inset 0 7px 21px 0 rgb(255 255 255 / 20%),
+    inset 0 -82px 68px 0 rgb(96 68 144 / 18%),
+    inset 0 -98px 100px -108px rgb(202 172 255 / 10%),
+    inset 0 4px 18px 0 rgb(154 146 210 / 15%),
+    inset 0 1px 40px 0 rgb(227 222 255 / 15%) !important;
+  border-radius: 13px;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px 29px;
+  display: flex;
+  overflow: hidden;
+  margin-top: 80px;
+}
 @media screen and (max-width: 768px) {
   .features-grid {
     /* gap: 41px;
@@ -334,7 +365,10 @@ body {
     display: grid;
   }
   .ban-pad {
-    padding: 10px 0 100px;
+    padding: 0px 0 100px;
+  }
+  .press-logos-outside-container {
+    margin-top: 0px;
   }
   .image-4 {
     width: 100%;
